2002-06-08  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* data/Makefile.am: add estudio/new files to dist/data
	* exult.spec.in: add estudio/new files to studio rpm

2002-06-08  Darke <darkepaw@users.sourceforge.net>
	* usecode/ucxt/src/ucfunc.cc: Removed the 'fix' we needed for
	strstreams.
	
	* usecode/ucxt/*: Updated a few things to avoid name collisions between
	ucxt/include/opcodes.h and usecode/opcodes.h.

2002-06-07  Jeff Freedman  <jeff@amy.nerble.net>

	* ucinternal.cc:  Fixed a couple compile errors if UC debugging
	isn't enabled.
	* Audio/*:  A couple headers needed to be included.

2002-06-08  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* */Makefile.am: cleaning up distro stuff
	* exult.spec.in: fixed
	* usecode/ucxt/head2data.cc: removed utils.cc dependency
	* version.cc: added USECODE_DEBUGGER symbol to version output

2002-06-07  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* exult.cc: typo

2002-06-07  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* *: merged audiotest branch back into main tree:

> 2002-06-06 Simon Quinn <email@simonquinn.co.uk>
>	* Recorded Exult title music in OGG pack and implemented in code
>
> 2002-06-03 Simon Quinn <email@simonquinn.co.uk>
>	* Play different SFX track at night and crickets
>	* Add config option <audio/disablepause> to toggle the pausing of
>    	  the audio when game pauses. (yes or no)
>
> 2002-05-29 Simon Quinn <email@simonquinn.co.uk>
>	* Work around for Usecode bug where track 0 is played at 
>	  Intro Earthquake.
>
> 2002-05-28 Simon Quinn <email@simonquinn.co.uk>
>	* Converted Windows MIDI out to use SDL_mixer, i.e. uses a 
> 	  Generic MidiOut.
>	* Changed MP3 references to DigitalMusic/OGG, now called 
>	  "DigitalMusic" in the audio settings.
>
> 2002-05-27 Simon Quinn <email@simonquinn.co.uk>
> 	* Implemented SDL_mixer/OGG changes into 'audiotest' branch of CVS.

2002-06-07  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>